--- a/ui/src/app/cohort-search/search-bar/search-bar.component.css
+++ b/ui/src/app/cohort-search/search-bar/search-bar.component.css
@@ -41,3 +41,8 @@ input {
     height: 25px;
     line-height: 0px;
 }
+.search-keyword {
+    color: #659F3D;
+    font-weight: bolder;
+    background-color: rgba(101,159,61,0.2);
+}
