--- a/ui/src/app/cohort-search/search-bar/search-bar.component.html
+++ b/ui/src/app/cohort-search/search-bar/search-bar.component.html
@@ -7,18 +7,18 @@
      [(ngModel)]="searchTerm"
      (input)="inputChange($event.target.value)"/>
     <span *ngIf="loading" class="spinner spinner-inline"></span>
-    <span *ngIf="noResults">
-      <clr-icon shape="times" class="is-error"></clr-icon>
-      No Results found
-    </span>
+  </div>
+  <div *ngIf="noResults" class="error">
+    <clr-icon shape="error-standard"></clr-icon>
+    <em>No Results Found</em>
   </div>
   <div *ngIf="options.length" class="dropdown-menu">
     <button
       *ngFor="let option of options"
       class="dropdown-item"
       type="button"
-      (click)="selectOption(option)">
-      {{option.name}}
+      (click)="selectOption(option)"
+      [innerHTML]="option.displayName | safeHtml">
     </button>
   </div>
 </div>
