--- a/ui/src/app/cohort-search/search-bar/search-bar.component.html
+++ b/ui/src/app/cohort-search/search-bar/search-bar.component.html
@@ -7,10 +7,10 @@
      [(ngModel)]="searchTerm"
      (input)="inputChange($event.target.value)"/>
     <span *ngIf="loading" class="spinner spinner-inline"></span>
-    <span *ngIf="noResults">
-      <clr-icon shape="times" class="is-error"></clr-icon>
-      No Results found
-    </span>
+  </div>
+  <div *ngIf="noResults" class="error">
+    <clr-icon shape="error-standard"></clr-icon>
+    <em>No Results Found</em>
   </div>
   <div *ngIf="noResults" class="error">
     <clr-icon shape="error-standard"></clr-icon>
