RW-1005 change alert class from warning to danger

--- a/ui/src/app/cohort-search/attributes-page/attributes-page.component.html
+++ b/ui/src/app/cohort-search/attributes-page/attributes-page.component.html
@@ -1,12 +1,9 @@
 <div class="title">
   {{node.get('name','')}}
 </div>
-<div *ngIf="negativeAlert" class="alert alert-warning alert-sm">
+<div *ngIf="negativeAlert" class="alert alert-danger alert-sm">
   <div class="alert-items">
     <div class="alert-item static">
-      <div class="alert-icon-wrapper">
-        <clr-icon class="alert-icon" shape="exclamation-triangle"></clr-icon>
-      </div>
       <div class="alert-text">
         Form cannot accept negative values
       </div>
