RW-894 fix rxnav link

--- a/ui/src/app/cohort-search/modal/modal.component.html
+++ b/ui/src/app/cohort-search/modal/modal.component.html
@@ -27,7 +27,7 @@
         </ng-container>
       </div>
       <div *ngIf="ctype === 'drug'">
-        <a href="https://rxnav.nlm.nih.gov/" target="_blank">
+        <a href="https://mor.nlm.nih.gov/RxNav/" target="_blank">
           Explore
         </a>
         drugs by brand names outside of AoU
