[RW-1052][Risk=no] Block account creation until after username taken returns

--- a/ui/src/app/views/account-creation/component.html
+++ b/ui/src/app/views/account-creation/component.html
@@ -43,7 +43,7 @@
     <div class="form-section">
       <button type="submit"
           class="btn btn-primary short-button"
-          [disabled]="creatingAccount"
+          [disabled]="creatingAccount || usernameCheckInProgress || usernameConflictError"
           [clrLoading]="creatingAccount">
         Next
       </button>
