--- a/ui/src/app/cohort-search/tree/tree.component.html
+++ b/ui/src/app/cohort-search/tree/tree.component.html
@@ -6,7 +6,7 @@
   <clr-icon shape="error-standard"></clr-icon>
   <em>Failed to Load Criteria</em>
 </div>
-<app-search-bar *ngIf="(_type === 'visit' || _type === 'drug') && !loading" [_type]="_type"></app-search-bar>
+<app-search-bar *ngIf="showSearch() && !loading" [_type]="_type"></app-search-bar>
 <div *ngIf="numMatches > 1">
   <b>Note:</b> There are {{numMatches}} matches for your search
 </div>
