--- a/ui/src/app/views/workspace/component.css
+++ b/ui/src/app/views/workspace/component.css
@@ -3,6 +3,7 @@
 }
 
 .greeting {
+  width: 89%;
   color: #2F2E7E;
   font-size: 20px;
   font-weight: 500;
@@ -65,6 +66,7 @@ h3 {
 .main-body {
   flex-grow: 1;
   margin-right: 0.6rem;
+  position: relative;
 }
 
 .right-sidebar {
@@ -165,4 +167,72 @@ app-workspace-nav-bar {
 .column {
   width: 45%;
   padding-right: 5%;
+}
+
+.switch {
+  position: absolute;
+  display: flex;
+  width: 78px;
+  height: 17px;
+  background-color: transparent;
+}
+
+.switch input {display:none;}
+
+.slider {
+  position: absolute;
+  cursor: pointer;
+  top: 0;
+  left: 0;
+  right: 0;
+  bottom: 0;
+  background-color: #AAAFB4;
+  -webkit-transition: .4s;
+  transition: .4s;
+}
+
+.slider:before {
+  position: absolute;
+  content: "";
+  height: 13px;
+  width: 13px;
+  left: 2px;
+  bottom: 2px;
+  background-color: #FFFFFF;
+  -webkit-transition: .4s;
+  transition: .4s;
+}
+
+input:checked + .slider {
+  background-color: #8BC990;
+}
+
+input:focus + .slider {
+  box-shadow: 0 0 1px #5FAEE0;
+}
+
+input:checked + .slider:before {
+  -webkit-transform: translateX(59px);
+  -ms-transform: translateX(59px);
+  transform: translateX(59px);
+}
+
+.slider.round {
+  border-radius: 34px;
+}
+
+.slider.round:before {
+  border-radius: 50%;
+}
+
+.slider-text {
+  font-size: .3rem;
+  color: #2F2E7E;
+  position: absolute;
+  bottom: -4px;
+  right: 6px;
+}
+
+input:checked ~ * .slider-text {
+  left: 6px;
 }
