--- a/ui/src/app/views/workspace/component.html
+++ b/ui/src/app/views/workspace/component.html
@@ -1,19 +1,11 @@
 <div class="help-tip" *ngIf="newWorkspace">
   <div class="help-tip-title">Welcome to your workspace!</div>
-  <div class="help-tip-text">One of the first things you may want to do is create a cohort and a notebook</div>
+  <div class="help-tip-text">Define a subset of the participant data by creating a cohort. Create a notebook to access and analyze your cohorts in Python.</div>
   <div (click)="dismissTip()" style="cursor: pointer"><clr-icon shape="times-circle" size="32px" style="position: absolute; top: 1.35rem; right: 1rem;height: 32px; width: 32px"></clr-icon></div>
 </div>
 <div class="workspace-container">
   <div class="main-body">
     <h2 class="greeting">{{newWorkspace ? 'Get Started' : 'Recent Work'}}</h2>
-    <div style="width: 3rem; font-size: .4rem; position: absolute; left: 6.5rem; top: 1.2rem">
-      <label class="switch">
-        <input type="checkbox" (click)="toggleTip()">
-        <span class="slider round">
-          <span class="slider-text">Help Tip: {{newWorkspace ? 'On' : 'Off'}}</span>
-        </span>
-      </label>
-    </div>
     <div style="width: 200px">
       <div role="tooltip" aria-haspopup="true" class="tooltip tooltip-md tooltip-top-right">
         <span *ngIf="awaitingReview" class="tooltip-content">Workspace is awaiting review</span>
