--- a/ui/src/app/cohort-search/demographics/demographics.component.html
+++ b/ui/src/app/cohort-search/demographics/demographics.component.html
@@ -43,7 +43,8 @@
         id="min-age"
         [min]="minAge" [max]="maxAge"
         formControlName="ageMin"
-        class="number-display">
+        class="number-display"
+        (blur)="checkMin()">
       <div class="slider">
         <nouislider
           [min]="minAge" [max]="maxAge" [step]="1"
@@ -56,7 +57,8 @@
         id="max-age"
         [min]="minAge" [max]="maxAge"
         formControlName="ageMax"
-        class="number-display">
+        class="number-display"
+        (blur)="checkMax()">
     </div>
   </div>
 
