--- a/ui/src/app/cohort-review/detail-tab-table/detail-tab-table.component.html
+++ b/ui/src/app/cohort-review/detail-tab-table/detail-tab-table.component.html
@@ -11,14 +11,14 @@
 
   <clr-dg-row *clrDgItems="let datum of data">
     <clr-dg-cell *ngFor="let col of columns" class="cell">
-      <ng-container [ngSwitch]="col.name">
-        <span *ngSwitchCase="'itemDate'">
-          {{ datum.itemDate }}
+      <ng-container [ngSwitch]="true">
+        <span *ngSwitchCase="col.name === 'itemDate' || col.name === 'firstMention' || col.name === 'lastMention'">
+          {{ datum[col.name] | date: 'short' }}
         </span>
-        <span *ngSwitchCase="'endDate'">
+        <span *ngSwitchCase="col.name === 'endDate'">
           {{ datum.endDate | date:'yyyy-MM-dd HH:mm:ss' }}
         </span>
-        <span *ngSwitchCase="'sourceVocabulary'"
+        <span *ngSwitchCase="col.name === 'sourceVocabulary'"
           [style.width.%]="100"
           [style.height.%]="100"
           [popper]="datum.sourceName || ''"
