--- a/ui/src/app/views/workspace-nav-bar/component.css
+++ b/ui/src/app/views/workspace-nav-bar/component.css
@@ -56,7 +56,7 @@
   outline: none;
 }
 
-:host::ng-deep .dropdown .dropdown-toggle:not(.btn) {
+:host::ng-deep .nav-bar-dropdown.dropdown .dropdown-toggle:not(.btn) {
   color: white;
   padding: 0;
   outline: none;
@@ -64,7 +64,7 @@
   width: 100%;
 }
 
-:host::ng-deep clr-dropdown.dropdown {
+:host::ng-deep clr-dropdown.nav-bar-dropdown.dropdown {
   height: 100%;
   width: 100%;
 }
@@ -77,16 +77,17 @@
  * Clarity's overflow elements apply a static position on click, so we needed to
  * override that.
  */
-::ng-deep #workspace-top-nav-bar.btn-group>.btn-group-overflow {
+:host::ng-deep #workspace-top-nav-bar.btn-group>.btn-group-overflow {
   position: absolute !important;
   right: 0;
   height: 100%;
   width: 5rem
 }
 
-::ng-deep #workspace-top-nav-bar .dropdown-menu {
+:host::ng-deep #workspace-top-nav-bar .dropdown-menu {
   width: 8rem;
   position: absolute;
+  /*The important labels are necessary to not accidentally create space off the edge of the page*/
   left: -120px !important;
   top: 55px !important;
 }
