--- a/ui/src/app/views/workspace-nav-bar/component.html
+++ b/ui/src/app/views/workspace-nav-bar/component.html
@@ -12,7 +12,7 @@
     Cohorts
   </clr-button>
   <clr-button class="btn btn-primary btn-top btn-dropdown">
-    <clr-dropdown>
+    <clr-dropdown class="nav-bar-dropdown">
       <button type="button" class="btn-dropdown-trigger" clrDropdownTrigger>
         <clr-icon shape="ellipsis-vertical"></clr-icon>
       </button>
