RW-1028 filter numMentions column as number instead of string

--- a/ui/src/app/cohort-review/detail-tab-table/detail-tab-table.component.html
+++ b/ui/src/app/cohort-review/detail-tab-table/detail-tab-table.component.html
@@ -3,20 +3,20 @@
   <clr-dg-placeholder>No {{ tabname }} Data</clr-dg-placeholder>
 
   <clr-dg-column *ngFor="let col of columns"
-    [clrDgField]="col.notField ? null : col.name"
+    [clrDgField]="col.notField ? null : (col.name === 'numMentions' ? 'numMentionsInt' : col.name)"
     [ngClass]="col.classNames"
     >
     {{ col.displayName }}
   </clr-dg-column>
 
-  <clr-dg-row *clrDgItems="let datum of data">
+  <clr-dg-row *clrDgItems="let datum of data; let i = index">
     <clr-dg-cell *ngFor="let col of columns" class="cell">
-      <ng-container [ngSwitch]="true">
-        <span *ngSwitchCase="col.name === 'itemDate' || col.name === 'firstMention' || col.name === 'lastMention'">
-          {{ datum[col.name] | date: 'short' }}
-        </span>
-        <span *ngSwitchCase="col.name === 'endDate'">
-          {{ datum.endDate | date:'yyyy-MM-dd HH:mm:ss' }}
+      <ng-container [ngSwitch]="col">
+        <span *ngSwitchCase="col.name === 'itemDate'
+          || col.name === 'endDate'
+          || col.name === 'firstMention'
+          || col.name === 'lastMention'">
+          {{ datum[col.name] | date: 'yyyy-MM-dd HH:mm' }}
         </span>
         <span *ngSwitchCase="col.name === 'sourceVocabulary'"
           [style.width.%]="100"
