RW-894 add ~ notation for parent counts

--- a/ui/src/app/cohort-search/node-info/node-info.component.html
+++ b/ui/src/app/cohort-search/node-info/node-info.component.html
@@ -30,6 +30,7 @@
   <div *ngIf="node.get('selectable')" class="count">
     <span class="text-muted">&#124;</span>
     <span class="badge badge-info">
+      <span *ngIf="node.get('group')">~</span>
       {{ node.get('count', 0) }}
     </span>
   </div>
