RW-1084 allignment chenges for table in cohort review

--- a/ui/src/app/cohort-review/detail-page/detail-page.css
+++ b/ui/src/app/cohort-review/detail-page/detail-page.css
@@ -1,6 +1,6 @@
 .detail-sidebar {
   position: absolute;
-  top: 0;
+  top: 1px;
   right: 0px;
   border: 1px solid rgb(86, 86, 86);
   border-radius: 2px;
