--- a/ui/src/app/views/app/component.css
+++ b/ui/src/app/views/app/component.css
@@ -86,8 +86,8 @@
 
 .app-container {
   width: 100%;
-  margin-right: 0.6rem;
-  margin-left: 1rem;
+  padding-right: 0.6rem;
+  padding-left: 1rem;
 }
 
 .background-image {
