--- a/ui/src/app/views/signed-in/component.css
+++ b/ui/src/app/views/signed-in/component.css
@@ -104,8 +104,8 @@
 
 .app-container {
   width: 100%;
-  margin-right: 0.6rem;
-  margin-left: 1rem;
+  padding-right: 0.6rem;
+  padding-left: 1rem;
   flex-grow: 1;
 }
 
