[RW-894][risk=no] UI for Drug tree (#1048)
* RW-894 move over changes from test branch

* RW-894 add redux action for autocomplete api call

* RW-894 add redux actions for ingredients call

* RW-894 complete api call for brand ingredients

* RW-894 update styles for keyword matches

* RW-894 ui clean-up, add messages for multiple matches

* RW-894 fix rxnav link

* RW-894 create constants to replace static strings

* [RW-1068][Risk=no] Tooltip on workspace creation (#1053)

* Tooltip on workspace creation

* Add newline

* RW-894 remove static strings, address PR comments

* RW-894 fix ALL_EVENTS name in BQ test

* RW-894 fix lint errors

* RW-894 remove static strings from tests

* RW-894 move over changes from test branch

* RW-894 add redux action for autocomplete api call

* RW-894 add redux actions for ingredients call

* RW-894 complete api call for brand ingredients

* RW-894 update styles for keyword matches

* RW-894 ui clean-up, add messages for multiple matches

* RW-894 fix rxnav link

* RW-894 create constants to replace static strings

* RW-894 remove static strings, address PR comments

* RW-894 fix ALL_EVENTS name in BQ test

* RW-894 fix lint errors

* RW-894 remove static strings from tests

* RW-1078 fixed test case. (#1056)

* [RW-1005][risk=no] Check for negatives for PM attributes (#1050)

* RW-1005 set min for number inputs

* RW-1005 add validation on operand input blur

* RW-929 add validate function

* RW-1005 complete form validation

* RW-1005 remove logs

* RW-1005 disable calculate and add values buttons for negative values

* RW-1005 change alert class from warning to danger

* RW-1005 check all values for negatives on input change

* [RW-953][risk=no] Handle NPEs from invalid billing project memberships (#1049)

* filter potential NPEs in lambda

* [RW-1033][risk=no] Avoid spurious profile reload (#1051)

* [RW-1033][risk=no] Handle more profile conflict e

--- a/ui/src/app/cohort-search/modal/modal.component.html
+++ b/ui/src/app/cohort-search/modal/modal.component.html
@@ -4,7 +4,7 @@
     <div class="title-bar">
       <div class="btn-group btn-link">
         <div class="title">{{ title }}</div>
-        <ng-container *ngIf="ctype !== 'demo'">
+        <ng-container *ngIf="ctype !== criteriaTypes.DEMO">
           <div class="vbar"></div>
           <button type="button" class="btn"
             [class.active]="mode === 'tree'"
@@ -12,7 +12,7 @@
             Criteria Tree
           </button>
           <button type="button" class="btn"
-            *ngIf="ctype !== 'pm'"
+            *ngIf="ctype !== criteriaTypes.PM"
             [class.active]="mode === 'modifiers'"
             (click)="mode = 'modifiers'">
             Modifiers
@@ -25,6 +25,12 @@
           </button>
           -->
         </ng-container>
+      </div>
+      <div *ngIf="ctype === domainType[domainType.DRUG]">
+        <a href="https://mor.nlm.nih.gov/RxNav/" target="_blank">
+          Explore
+        </a>
+        drugs by brand names outside of AoU
       </div>
       <button
         (click)="cancel()"
@@ -40,7 +46,7 @@
     -->
     <div class="content" *ngIf="open">
       <ng-container [ngSwitch]="ctype">
-        <crit-demographics *ngSwitchCase="'demo'"
+        <crit-demographics *ngSwitchCase="criteriaTypes.DEMO"
           (cancel)="cancel()"
           (finish)="finish()">
         </crit-demographics>
@@ -79,7 +85,7 @@
       </ng-container>
     </div>
 
-    <div *ngIf="ctype !== 'demo'" class="footer">
+    <div *ngIf="ctype !== criteriaTypes.DEMO" class="footer">
       <button type="button"
         (click)="cancel()"
         class="btn btn-link">
