--- a/ui/src/app/views/workspace-nav-bar/component.css
+++ b/ui/src/app/views/workspace-nav-bar/component.css
@@ -87,7 +87,10 @@
 :host::ng-deep #workspace-top-nav-bar .dropdown-menu {
   width: 8rem;
   position: absolute;
-  /*The important labels are necessary to not accidentally create space off the edge of the page*/
+  /*
+   * The important labels are necessary to not accidentally create space off the
+   * edge of the page
+   */
   left: -120px !important;
   top: 55px !important;
 }
